--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,15 @@ body {
     max-width: 1400px;
     margin: 0 auto;
 }
+section {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+}
 
 header {
     background-image: linear-gradient(rgba(0,0,0,0.4) , rgba(0,0,0,0.6)),
@@ -54,7 +63,48 @@ header a {
     display: inline-block;
 }
 
-@media (max-width: 900px) {
+footer {
+    color: white;
+    background-image: linear-gradient(
+            rgba(39, 32, 68, 0.9),
+            rgba(39, 32, 68, 0.9)
+    ),
+    url("../images/kyiv2.jpg");
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 100px 0;
+}
+footer h3 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+footer p {
+    font-weight: 400;
+    font-size: 16px;
+    opacity: 0.7;
+    margin-right: 20px;
+    line-height: 24px;
+}
+
+footer ul {
+    padding: 0;
+}
+
+footer li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+footer a {
+    color: white;
+    opacity: 0.7;
+}
+
+@media (max-width: 960px) {
     header {
         padding: 60px 0;
     }
