--- a/src/style.css
+++ b/src/style.css
@@ -6,15 +6,52 @@ body {
     max-width: 1400px;
     margin: 0 auto;
 }
+.text-center {
+    text-align: center;
+}
 section {
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 100px 0;
+    padding: 100px;
+}
+
+section.secondary {
+    background: #f8f8f8;
 }
 
 .grid {
     display: grid;
     gap: 65px;
+}
+
+.grid-3-columns {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card {
+    background: white;
+    margin: 30px 0;
+}
+.card-body {
+    padding: 30px;
+}
+
+.card-footer {
+    padding: 0 30px 30px;
+}
+
+.btn {
+    display: block;
+    color: white;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 16px;
+    background-color: #462cb3;
+    text-decoration: none;
 }
 
 .img-responsive {
@@ -101,6 +138,22 @@ main h3 {
     margin: 0;
 }
 
+main h4 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1;
+    color: #272044;
+    margin: 0;
+}
+
+main h5 {
+    font-weight: 700;
+    font-size: 13px;
+    margin: 0;
+    line-height: 1;
+    color: #272044;
+}
+
 main p {
     font-style: normal;
     font-weight: 400;
@@ -109,6 +162,7 @@ main p {
     color: #272044;
     opacity: 0.7;
 }
+
 
 footer {
     color: white;
